k3s/manifests/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
spec:
  selector:
    app: docs
  ports:
    - port: 8000
      targetPort: 8000
      name: http
